--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         <a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
+                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a>
@@ -310,7 +310,7 @@
 <div class="container">
         <!-- Left Side - Image Gallery (Slideshow) -->
         <div class="left-side">
-            <h2>Image Slideshow</h2>
+            <h2></h2>
             <div class="gallery">
                 <img src="./gallery/aa1.jpg" alt="Image 1">
                 <img src="./gallery/aa1.jpg" alt="Image 2">
