--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -206,7 +206,7 @@
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/33.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Principal.Khalid Hussain Buriro </div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Phd. Zoology</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">PhD. Zoology</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No.03013218163</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Gmail</div>
             </div>
