--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
-            <h2>New</h2>
+            <h2  style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.25em;"  onclick="window.location.href='Notice.html';">VIEW ALL</h2>
             <div class="scroll-paragraph">
                 <p>The practical exams are starting from March 21
                    <br>Dear students, come to college daily
