--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         @media (max-width: 767px) {
             .second-image {
                 width: 50%; /* Image takes full width on smaller screens */
+	        height: auto; 
                 padding-left: 0; /* Remove left padding on small screens */
                 padding-right: 0; /* Remove right padding on small screens */
             }
