--- a/index.html
+++ b/index.html
@@ -168,21 +168,20 @@
             margin-top: 0.5rem;
             color: #333;
         }
+/* Make the image responsive on all devices */
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
 
-        /* Responsive adjustments */
-        @media (max-width: 767px) {
-            .second-image {
-                width: 50%; /* Image takes full width on smaller screens */
-	        height: auto; 
-                padding-left: 0; /* Remove left padding on small screens */
-                padding-right: 0; /* Remove right padding on small screens */
-            }
+/* For mobile devices (screen width 768px or smaller) */
+@media (max-width: 768px) {
+  .second-image {
+    width: 80%; /* Adjust the percentage as needed */
+    margin: 0 auto; /* Center the image */
+  }
+}
 
-            /* Adjust text size for small screens */
-            .second-image + p {
-                font-size: 1rem;
-            }
-        }
         /* Footer styles */
         footer {
             background-color: #ffffff;
