--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -194,9 +194,10 @@
             </div>
         </div>
     </nav>
+	<h2 style="text-align: center; color: red; font-size: 2rem">Introduction</h2><br>
+  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">The girls' college, where students have been studying since 1990, was originally a girls' high school building. It was officially established as a girls' college in 2006, and since then, students have been receiving their education, benefiting from the available facilities and academic opportunities.</p>
 
-
-
+<p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">The college has a library where students can access various resources. It also features a solar system, a computer lab, and additional laboratories where students conduct practical work. Additionally, the college has a garden.</p>
 
     <h2 style="text-align: center;">Teaching Faculity </h2>
 
