--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -205,14 +205,14 @@
         <div class="lecturer-container" id="lectures-container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px; overflow: hidden;">
             <!-- Lecturer 1 -->
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/33.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <img src="gallery/sir khalid.jpg" alt="sir" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Principal.Khalid Hussain Buriro </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">PhD. Zoology</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No.03013218163</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Gmail</div>
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <img src="gallery/SB1.jpg" alt="sir" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr. Aziz ullah phull </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Assistant Prof: Sindhi</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03</div>
@@ -221,7 +221,7 @@
             </div>
           
 		 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/sir zahid.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <img src="gallery/sir zahid.jpg" alt="sir" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof.Zahid Hussain Siyal</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Chemistry</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03063050188</div>
@@ -230,7 +230,7 @@
 			 
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/sir athar.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <img src="gallery/sir athar.jpg" alt="sir" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Athar Ali Siyal</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Physics</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03333307237</div>
@@ -238,7 +238,7 @@
 		<div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Joining Date. 4 oct 2024</div>
             </div>
 		  <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/sir aijaz.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <img src="gallery/sir aijaz.jpg" alt="sir" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr. Aijaz Ahmed Lakho</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Sindhi</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03113239520</div>
@@ -246,14 +246,14 @@
             </div>
 		
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <img src="gallery/SB1.jpg" alt="sir" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr Aijaz Ali Jatoi </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Botony</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">@gmail.com</div>
             </div>
 		 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/sadia.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <img src="gallery/sadia.jpg" alt="sir" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mis Haleema Sadia Jamali</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Pakistan Study</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03091307838</div>
