--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -187,7 +187,7 @@
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
         <div class="container-fluid">
-            <a class="navbar-brand text-black" href="Government-Girls-College-Daulatpur.html">Govt Girls College Daulatpur</a>
+            <a class="navbar-brand text-black" href="COLLEGE.html">Govt Girls College Daulatpur</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
