--- a/Notice.html
+++ b/Notice.html
@@ -11,14 +11,30 @@
 <li class="nav-item"><a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">GALLERY</a></li>
 <li class="nav-item"><a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a></li>
 <li class="nav-item"><a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a></li>
-</ul></div></div></nav><footer><div class="container"><div class="footer-grid"><div><h2>About</h2>
+</ul></div></div></nav>
+  
+  
+  <p>کالج میں ایک چھوٹا لیکن سب سے خوبصورت باغ ہے۔</p>
+  
+  
+  
+  
+  
+  <footer><div class="container"><div class="footer-grid"><div>
+    <h2>About</h2>
+    
 <ul><li><a href="CONTACT-US.html" target="_self">Contact</a></li>
+  
 <li><a href="Government-Girls-College-Daulatpur.html" target="_self">GGC, Daulatpur</a></li>
+  
 <li><a href="COLLEGE.html" target="_self">College</a></li></ul></div><div><h2>Universities Links</h2>
+  
 <ul><li><a href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
 <li><a href="https://pumhs.edu.pk/" target="_self"> PUMHS University</a></li>
+  
 <li><a href="https://quest.edu.pk/" target="_self"> QUAID-E-AWAM UNIVERSITY</a></li>
 <li><a href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
+  
 <li><a href="https://www.muet.edu.pk/" target="_self"> MEHRAN University</a></li></ul></div>
 <div><ul><li><a href="https://www.lumhs.edu.pk/home/" target="_self">LUMS Jamshoro</a></li>
 <li><a href="https://isra.edu.pk/" target="_self"> ISRA University</a></li>
