--- a/Notice.html
+++ b/Notice.html
@@ -13,8 +13,16 @@
 <li class="nav-item"><a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a></li>
 </ul></div></div></nav>
   
+  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+    The practical exams are starting from March 21
+                   <br>Dear students, come to college daily.</p>
+
+  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+<br>پریکٹیکل امتحان 21 مارچ کان شروع ٿي رهيا آهن
+پيارا شاگردو، روزانو ڪاليج اچو.</p>
+  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+    پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔<br> عزیز طلباء، روزانہ کالج آئیںں</p>
   
-  <p>کالج میں ایک چھوٹا لیکن سب سے خوبصورت باغ ہے۔</p>
   
   
   
