--- a/index.html
+++ b/index.html
@@ -329,6 +329,27 @@
 			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
                    <button style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.25em; color: white; cursor: pointer; position: relative; overflow: hidden; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff); background-size: 400% 400%; animation: shine 3s ease infinite, glow 1.5s ease-in-out infinite;" onclick="window.location.href='Notice.html';">VIEW MORE..</button>
                 </p>
+ <div class="scroll-paragraph-2">
+                <p>The practical exams are starting from March 21
+                   <br>Dear students, come to college daily<br><br>
+
+			پریکٹیکل امتحان 21 مارچ کان شروع ٿي رهيا آهن 
+پيارا شاگردو، روزانو ڪاليج اچو.
+			<br><br>
+			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
+                   <button style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.25em; color: white; cursor: pointer; position: relative; overflow: hidden; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff); background-size: 400% 400%; animation: shine 3s ease infinite, glow 1.5s ease-in-out infinite;" onclick="window.location.href='Notice.html';">VIEW MORE..</button>
+                </p>
+ <div class="scroll-paragraph-2">
+                <p>The practical exams are starting from March 21
+                   <br>Dear students, come to college daily<br><br>
+
+			پریکٹیکل امتحان 21 مارچ کان شروع ٿي رهيا آهن 
+پيارا شاگردو، روزانو ڪاليج اچو.
+			<br><br>
+			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
+                   <button style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.25em; color: white; cursor: pointer; position: relative; overflow: hidden; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff); background-size: 400% 400%; animation: shine 3s ease infinite, glow 1.5s ease-in-out infinite;" onclick="window.location.href='Notice.html';">VIEW MORE..</button>
+                </p>
+	 
             </div>
         </div>
     </div>
