--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -224,6 +224,9 @@
              <div class="image-item" onclick="openModal(9)">
                 <img src="./gallery/SB10.jpg" alt="Image 10">
             </div>
+             <div class="image-item" onclick="openModal(10)">
+                <img src="./gallery/SB11.jpg" alt="Image 11">
+            </div>
         </div>
     </div>
 
