--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -187,6 +187,14 @@
     </nav>
 
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
+      <div class="image-gallery-container">
+        <h4 style="text-align:center; font-size: 1rem; color: red;">2024 to 2025</h4>
+        <div class="image-gallery">
+            <!-- Second set of images -->
+            <div class="image-item" onclick="openModal(22)">
+                <img src="./gallery/aa.jpg" alt="Image 5">
+                
+            </div>
  
     <div class="image-gallery-container">
         <h4 style="text-align:center; font-size: 1rem; color: red;">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region<br>7-3-25</h4>
