--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             .container {
                 flex-direction: row; /* Display side by side on larger screens */
             }
-            .left-side, .right-side {
+            .right-side, .left-side {
                 width: 48%; /* Adjust the width on medium screens */
                 margin-bottom: 1;
             }
