--- a/index.html
+++ b/index.html
@@ -322,14 +322,11 @@
             <button class="nav-btn prev-btn" onclick="moveSlide(-1)">&#10094;</button>
             <button class="nav-btn next-btn" onclick="moveSlide(1)">&#10095;</button>
         </div>
-
+<h1 style="font-size: 3rem; animation: walkGlow 3s ease-in-out infinite; text-shadow: 0 0 5px rgba(255, 255, 255, 0.5); opacity: 0.5; transform: translateX(-50px);">NEW</h1>
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
-	<h1 style="font-size: 3rem; animation: combinedAnimation 2s ease-out;">
-        NEW
-    </h1>
 
-            <h2  style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.25em; cursor: pointer; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff);" 
+            <h2  style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.15em; cursor: pointer; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff);" 
 		    onclick="window.location.href='Notice.html';">VIEW ALL</h2>
             <div class="scroll-paragraph">
                 <p>The practical exams are starting from March 21
