--- a/index.html
+++ b/index.html
@@ -325,6 +325,8 @@
 
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
+<h2 style="font-size: 0.5em; padding: 0.5em 1em; border-radius: 0.15em; cursor: pointer; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff);" 
+    onclick="window.location.href='Notice.html';">VIEW ALL</h2>
 
             <h2  style="font-size: 1em; padding: 0.5em 1em; border-radius: 0.15em; cursor: pointer; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff);" 
 		    onclick="window.location.href='Notice.html';">VIEW ALL</h2>
