--- a/index.html
+++ b/index.html
@@ -325,12 +325,8 @@
 
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
-       <h2 style="font-size: 0.8em; padding: 0.5em; width: 30%; border-radius: 0.15em; cursor: pointer; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff); text-align: right;" 
-    onclick="window.location.href='Notice.html';">VIEW ALL</h2>
 
-
-
-            <h2  style="font-size: 1em; padding: 0.5em 1em; border-radius: 0.15em; cursor: pointer; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff);" 
+            <h2  style="font-size: 1em; padding: 0.5em 1em; width: 30%; border-radius: 0.15em; cursor: pointer; background: linear-gradient(45deg, #ff007f, #ff9b00);" 
 		    onclick="window.location.href='Notice.html';">VIEW ALL</h2>
             <div class="scroll-paragraph">
                 <p>The practical exams are starting from March 21
