--- a/index.html
+++ b/index.html
@@ -315,9 +315,11 @@
             <h2></h2>
             <div class="gallery">
                 <img src="./gallery/aa1.jpg" alt="Image 1">
-                <img src="./gallery/11.jpg" alt="Image 2">
-                <img src="./gallery/22.jpg" alt="Image 3">
-                <img src="./gallery/33.jpg" alt="Image 4">
+                <img src="./gallery/SB5.jpg" alt="Image 2">
+		 <img src="./gallery/SB7.jpg" alt="Image 3">
+		 <img src="./gallery/SB8.jpg" alt="Image 4">
+                <img src="./gallery/22.jpg" alt="Image 5">
+                <img src="./gallery/33.jpg" alt="Image 6">
             </div>
             <button class="nav-btn prev-btn" onclick="moveSlide(-1)">&#10094;</button>
             <button class="nav-btn next-btn" onclick="moveSlide(1)">&#10095;</button>
