--- a/index.html
+++ b/index.html
@@ -350,10 +350,7 @@
 پيارا شاگردو، روزانو ڪاليج اچو.
 			<br><br>
 			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
-                   <button style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.25em; color: white; cursor: pointer; position: relative; overflow: hidden; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff); background-size: 400% 400%; animation: shine 3s ease infinite, glow 1.5s ease-in-out infinite;" onclick="window.location.href='Notice.html';">VIEW MORE..</button>
-                </p>
- <li ><div style="float:left; height:25px;">&raquo; &nbsp; </div><div style="width:240px"><a  href="Notice.html" > exam <img src="https://pu.edu.pk/images/News/a-new.gif"></a></div></li><br>
-	 
+                   <div style="width:440px"><a  href="Notice.html" > exam <img src="https://pu.edu.pk/images/News/a-new.gif"></a></div></li><br>
             </div>
         </div>
     </div>
