--- a/index.html
+++ b/index.html
@@ -350,7 +350,10 @@
 پيارا شاگردو، روزانو ڪاليج اچو.
 			<br><br>
 			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
-                   <div style="width:440px"><a  href="Notice.html" > exam <img src="https://pu.edu.pk/images/News/a-new.gif"></a></div></li><br>
+                   <div style="width:440px">
+  <a href="Notice.html">View more..
+    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; height:auto;"> </a></div><br>
+
             </div>
         </div>
     </div>
