--- a/index.html
+++ b/index.html
@@ -327,7 +327,9 @@
 
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
-
+<div style="width:440px">
+  <a href="Notice.html">View more..
+    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; height:auto;"> </a></div><br>
             <h2  style="font-size: 1em; padding: 0.5em 1em; width: 30%; border-radius: 0.15em; color: white; cursor: pointer; background: linear-gradient(45deg, #ff007f, #ff9b00);" 
 		    onclick="window.location.href='Notice.html';">VIEW ALL</h2>
             <div class="scroll-paragraph">
@@ -337,7 +339,9 @@
 پيارا شاگردو، روزانو ڪاليج اچو.
 			<br><br>
 			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
-                   <button style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.25em; color: white; cursor: pointer; position: relative; overflow: hidden; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff); background-size: 200% 200%; animation: shine 3s ease infinite, glow 1.5s ease-in-out infinite;" onclick="window.location.href='Notice.html';">VIEW MORE..</button>
+                  <div style="width:440px">
+  <a href="Notice.html">View more..
+    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;"> </a></div><br>
                 </p>
             </div>
 
@@ -352,7 +356,7 @@
 			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
                    <div style="width:440px">
   <a href="Notice.html">View more..
-    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; height:auto;"> </a></div><br>
+    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;"> </a></div><br>
 
             </div>
         </div>
