--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
         <div class="right-side">
 <div style="width:440px">
   <a href="Notice.html">View more..
-    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; height:auto;"> </a></div><br>
+   <div style="width:440px"><a href="Notice.html"><img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; float:left; margin-right:10px;"> exam</a></div><br>
+
             <h2  style="font-size: 1em; padding: 0.5em 1em; width: 30%; border-radius: 0.15em; color: white; cursor: pointer; background: linear-gradient(45deg, #ff007f, #ff9b00);" 
 		    onclick="window.location.href='Notice.html';">VIEW ALL</h2>
             <div class="scroll-paragraph">
