--- a/index.html
+++ b/index.html
@@ -327,8 +327,15 @@
 
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
-            <h2  style="font-size: 1em; padding: 0.5em 1em; width: 30%; border-radius: 0.15em; color: white; cursor: pointer; background: linear-gradient(45deg, #ff007f, #ff9b00);" 
-		    onclick="window.location.href='Notice.html';">VIEW ALL</h2>
+		 <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;">
+		<div style="width:440px">
+  <a href="Notice.html">
+    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto; float:left; margin-right:10px;">
+    <h2 style="margin:0;">Exam</h2> 
+  </a>
+</div>
+<br>
+            
             <div class="scroll-paragraph">
                 <p>The practical exams are starting from March 21
                    <br>Dear students, come to college daily<br><br>
