--- a/index.html
+++ b/index.html
@@ -328,14 +328,15 @@
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
 		 <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;">
-		<div style="width:440px">
+
+            <div style="width:440px">
   <a href="Notice.html">
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto; float:left; margin-right:10px;">
-    <h2 style="margin:0;">Exam</h2> 
+    <span style="vertical-align:middle;">Exam</span>
   </a>
 </div>
 <br>
-            
+
             <div class="scroll-paragraph">
                 <p>The practical exams are starting from March 21
                    <br>Dear students, come to college daily<br><br>
