--- a/index.html
+++ b/index.html
@@ -327,12 +327,12 @@
 
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
-		 <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;">
+		 
 
             <div style="width:440px">
   <a href="Notice.html">
-    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto; float:left; margin-right:10px;">
-    <span style="vertical-align:middle;">Exam</span>
+    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; height:auto; float:left; margin-right:30px;">
+    <span style="vertical-align:middle;">VIEW ALL</span>
   </a>
 </div>
 <br>
@@ -346,7 +346,7 @@
 			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
                   <div style="width:440px">
   <a href="Notice.html">View more..
-    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;"> </a></div><br>
+    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:70px; height:auto;"> </a></div><br>
                 </p>
             </div>
 
@@ -361,7 +361,7 @@
 			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
                    <div style="width:440px">
   <a href="Notice.html">View more..
-    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;"> </a></div><br>
+    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:70px; height:auto;"> </a></div><br>
 
             </div>
         </div>
