--- a/index.html
+++ b/index.html
@@ -331,10 +331,9 @@
 
             <div style="width:440px">
   <a href="Notice.html">
-    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; height:auto; float:left; margin-right:30px;">
-    <span style="vertical-align:middle;">VIEW ALL</span>
-  </a>
-</div>
+  <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; height:auto; float:left; margin-right:30px;">
+  <span style="vertical-align:middle; font-size:20px;">VIEW ALL</span>
+</a>
 <br>
 
             <div class="scroll-paragraph">
