--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         /* First Paragraph - Slower Scrolling */
         .scroll-paragraph {
             position: absolute;
-            top: 80%;
+            top: 100%;
             animation: scroll-up 14s linear infinite; /* Continuous scroll for the first paragraph */
             font-size: 18px;
             color: #333;
@@ -120,7 +120,7 @@
         /* Second Paragraph - Faster Scrolling */
         .scroll-paragraph-2 {
             position: absolute;
-            top: 80%;
+            top: 100%;
             animation: scroll-up-2 14s linear infinite; /* Continuous scroll for the second paragraph */
             animation-delay: 10s; /* Delay to ensure it starts after the first paragraph */
             font-size: 18px;
@@ -327,12 +327,9 @@
 
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
-		 
-  <a href="Notice.html">
-  <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; height:auto; float:left; margin-right:70px;">
-  <span style="vertical-align:middle; font-size:20px;">VIEW ALL</span>
-</a>
-<br>
+		<a href="https://www.example.com" style="text-align: right; display: block;">Click here to visit Example</a>
+
+		 <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;"><br>
 
             <div class="scroll-paragraph">
                 <p>The practical exams are starting from March 21
