--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
-<a href="https://www.example.com" style="text-align: right; display: block; font-size: 30px; text-decoration: none;">VIEW ALL</a>
+<a href="Notice.html" style="text-align: right; display: block; font-size: 30px; text-decoration: none;">VIEW ALL</a>
 		 <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;">
             <div class="scroll-paragraph">
                 <p>The practical exams are starting from March 21
