--- a/index.html
+++ b/index.html
@@ -327,8 +327,11 @@
 
         <!-- Right Side - Scrolling Paragraph -->
         <div class="right-side">
-<a href="Notice.html" style="text-align: right; display: block; font-size: 30px; text-decoration: none;">VIEW ALL</a>
-		 <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;">
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+    <a href="Notice.html" style="font-size: 30px; text-decoration: none;">VIEW ALL</a>
+    <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;">
+</div>
+
             <div class="scroll-paragraph">
                 <p>The practical exams are starting from March 21
                    <br>Dear students, come to college daily<br><br>
