--- a/index.html
+++ b/index.html
@@ -333,12 +333,13 @@
 </div>
 
             <div class="scroll-paragraph">
-                <p>The practical exams are starting from March 21
-                   <br>Dear students, come to college daily<br><br>
-			پریکٹیکل امتحان 21 مارچ کان شروع ٿي رهيا آهن 
-پيارا شاگردو، روزانو ڪاليج اچو.
+                <p>it is hereby notified that <br>
+			the pre-board examinations in our college will begin on wednesday 26th march...
+		       <br><br>
+			یہاں سے مطلع کیا جاتا ہے کہ<br>
+			ہمارے کالج میں پری بورڈ امتحانات 26 مارچ بروز بدھ سے شروع ہوں گے۔
 			<br><br>
-			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
+			 هتي اطلاع ڏنو وڃي ٿو ته <br>اسان جي ڪاليج ۾ پري بورڊ جا امتحان اربع 26 مارچ تي شروع ٿيندا.
                   <div style="width:440px">
   <a href="Notice.html">View more..
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:70px; height:auto;"> </a></div><br>
@@ -347,13 +348,13 @@
 
             <!-- Second paragraph that starts after the first one finishes -->
             <div class="scroll-paragraph-2">
-                <p>The practical exams are starting from March 21
-                   <br>Dear students, come to college daily<br><br>
-
-			پریکٹیکل امتحان 21 مارچ کان شروع ٿي رهيا آهن 
-پيارا شاگردو، روزانو ڪاليج اچو.
+                 <p>it is hereby notified that <br>
+			the pre-board examinations in our college will begin on wednesday 26th march...
+		       <br><br>
+			یہاں سے مطلع کیا جاتا ہے کہ<br>
+			ہمارے کالج میں پری بورڈ امتحانات 26 مارچ بروز بدھ سے شروع ہوں گے۔
 			<br><br>
-			 پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔ <br> عزیز طلباء، روزانہ کالج آئیںں
+			 هتي اطلاع ڏنو وڃي ٿو ته <br>اسان جي ڪاليج ۾ پري بورڊ جا امتحان اربع 26 مارچ تي شروع ٿيندا.
                    <div style="width:440px">
   <a href="Notice.html">View more..
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:70px; height:auto;"> </a></div><br>
