--- a/Notice.html
+++ b/Notice.html
@@ -14,18 +14,13 @@
 </ul></div></div></nav>
   
   
+  <br>
   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-    The practical exams are starting from March 21
-                   <br>Dear students, come to college daily.</p>
+    it is hereby notified that the pre-board examinations in our college will begin on wednesday 26th march.<br>
+    the detailed time table for the examinations is as follows:</p>
+  
+  <img src="./gallery/preboard.jpg" alt="Description of the image">
 
-  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-<br>پریکٹیکل امتحان 21 مارچ کان شروع ٿي رهيا آهن
-پيارا شاگردو، روزانو ڪاليج اچو.</p>
-  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-    پریکٹیکل امتحانات 21 مارچ سے شروع ہو رہے ہیں۔<br> عزیز طلباء، روزانہ کالج آئیںں</p>
-  
-  
-  
   
   
   
