--- a/Notice.html
+++ b/Notice.html
@@ -19,9 +19,10 @@
     it is hereby notified that the pre-board examinations in our college will begin on wednesday 26th march.<br>
     the detailed time table for the examinations is as follows:</p>
   
-  <img src="./gallery/preboard.jpg" alt="Description of the image">
-
   
+
+  <img src="./gallery/preboard.jpg" alt="Description" style="padding-left: 20px; padding-right: 20px;">
+
   
   
   <footer><div class="container"><div class="footer-grid"><div>
