--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -204,23 +204,15 @@
           <div class="gallery-group">
              <h4 style="text-align:center; font-size: 1rem; color: red;">2024 to 2025</h4>
             <div class="gallery">
-                 <div class="gallery-item">
-                    <img src="./gallery/aa.jpg" alt="Image 1">
-                    <div class="overlay"></div>
-	           <caption>23 March Pakistan Day. A seminar held at Government Girls College Daulatpur. Prof Irshad Ali Otho Headed the program as Guest Speaker.</caption>
-                    <div class="overlay-message">Right-click is disabled.</div>
-                </div>
-				 <div class="gallery-item">
-                    <img src="./gallery/bb.jpg" alt="Image 2">
-                    <div class="overlay"></div>
-                    <div class="overlay-message">Right-click is disabled.</div>
-                </div>
-				 <div class="gallery-item">
-                    <img src="./gallery/cc.jpg" alt="Image 3">
-                    <div class="overlay"></div>
-                    <div class="overlay-message">Right-click is disabled.</div>
-                </div>
-		     </div>
+                <div class="gallery-item">
+    <h3 class="gallery-heading">Image 1 Title</h3>
+    <img src="./gallery/aa.jpg" alt="Image 1">
+    <div class="overlay"></div>
+    <div class="overlay-message">Right-click is disabled.</div>
+</div>
+
+				
+	</div>
         </div>
         <!-- Gallery Group 1 -->
         <div class="gallery-group">
