--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -202,11 +202,11 @@
     <section class="gallery-section">
         <h1 style="text-align: center; margin-bottom: 0.3em;">Govt Girls College Daulatpur</h1>
           <div class="gallery-group">
-             <h4 style="text-align:center; font-size: 1rem; color: red;">2024 to 2025</h4>
+             <h4 style="text-align:center; font-size: 1rem; color: red;">23 March Pakistan Day<br> A seminar held at Government Girls College Daulatpur.<br> Prof Irshad Ali Otho Headed the program as Guest Speaker.</h4>
             <div class="gallery">
                 <div class="gallery-item">
     <h3 class="gallery-heading">Image 1 Title</h3>
-    <img src="./gallery/aa.jpg" alt="Image 1">
+    <img src="./gallery/SB12.jpg" alt="Image 1">
     <div class="overlay"></div>
     <div class="overlay-message">Right-click is disabled.</div>
 </div>
