--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -205,7 +205,8 @@
              <h4 style="text-align:center; font-size: 1rem; color: red;">23 March Pakistan Day<br> A seminar held at Government Girls College Daulatpur.<br> Prof Irshad Ali Otho Headed the program as Guest Speaker.</h4>
             <div class="gallery">
                 <div class="gallery-item">
-    <h3 class="gallery-heading">Image 1 Title</h3>
+<h4 style="text-align:center; font-size: 1rem; color: red;">23 March Pakistan Day<br> A seminar held at Government Girls College Daulatpur.<br> Prof Irshad Ali Otho Headed the program as Guest Speaker.</h4>
+    
     <img src="./gallery/SB12.jpg" alt="Image 1">
     <div class="overlay"></div>
     <div class="overlay-message">Right-click is disabled.</div>
