--- a/index.html
+++ b/index.html
@@ -1,385 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Government Girls College</title>
-    <!-- Link to Bootstrap CSS (CDN) -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome Icons CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        /* Global Styles */
-        body {
-            font-size: 1rem;
-            line-height: 1.2;
-            margin: 0;
-            padding: 0;
-            background: #E0FFFF;
-        }
-
-        .navbar-custom {
-            background-color: #FFF8DC;
-        }
-
-        .navbar a:hover {
-            background-color: #9b1d38;
-            border-radius: 0.25rem;
-        }
-
-        .container {
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        /* Left side - Image Gallery */
-        .left-side {
-            width: 100%;
-            max-width: 800px;  
-            background-color: #fff;
-            padding: 5px;
-            border-radius: 2px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            position: relative;
-            height: 450px;
-        }
-
-        .gallery {
-            display: flex;
-            transition: transform 0.5s ease-in-out;
-            width: 100%;
-        }
-
-        .gallery img {
-            width: 100%;
-            height: auto; 
-            object-fit: cover; 
-            border-radius: 2px;
-        }
-
-        /* Navigation Buttons for Slideshow */
-        .nav-btn {
-            position: absolute;
-            top: 50%;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            padding: 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 18px;
-            transform: translateY(-50%);
-        }
-
-        .prev-btn {
-            left: 10px;
-        }
-
-        .next-btn {
-            right: 10px;
-        }
-
-        /* Right side - Scrolling Paragraph */
-        .right-side {
-            width: 100%;
-            max-width: 800px;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            position: relative;
-            height: 450px;
-            overflow: hidden;
-        }
-
-        /* Scrolling Paragraphs */
-        .scroll-paragraph, .scroll-paragraph-2 {
-            position: absolute;
-            top: 100%;
-            font-size: 18px;
-            color: #333;
-            line-height: 1.0;
-            animation: scroll-up 14s linear infinite;
-        }
-
-        .scroll-paragraph-2 {
-            animation: scroll-up 14s linear infinite; /* Both paragraphs scroll simultaneously */
-        }
-
-        @keyframes scroll-up {
-            0% {
-                top: 100%;
-            }
-            50% {
-                top: -50%;
-            }
-            100% {
-                top: -100%;
-            }
-        }
-
-        /* Responsive Design - Flexbox adjustment for larger screens */
-        @media (min-width: 768px) {
-            .container {
-                flex-direction: row;
-            }
-            .right-side, .left-side {
-                width: 48%; 
-                margin-bottom: 1;
-            }
-        }
-
-        /* For Mobile View */
-        @media (max-width: 768px) {
-            .container {
-                flex-direction: column-reverse; 
-            }
-
-            .right-side, .left-side {
-                width: 100%; 
-                margin-bottom: 20px;
-            }
-
-            .nav-btn {
-                font-size: 14px;
-            }
-
-            .scroll-paragraph, .scroll-paragraph-2 {
-                font-size: 16px;
-            }
-        }
-
-        /* Second image style */
-        .second-image {
-            width: 100%;
-            max-width: 100%;
-            height: auto;
-            padding: 1rem;
-            margin: 0 auto;
-            display: block;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        @media (max-width: 768px) {
-            .second-image {
-                width: 80%;
-            }
-        }
-
-        /* Footer styles */
-        footer {
-            background-color: #ffffff;
-            color: #333;
-            padding: 2rem 0;
-            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-            margin-top: auto;
-            text-align: center;
-        }
-
-        footer .container {
-            width: 90%;
-            margin: 0 auto;
-            max-width: 1200px;
-        }
-
-        footer h2 {
-            font-size: 1.25rem;
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 1rem;
-        }
-
-        footer ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        footer ul li {
-            margin-bottom: 0.75rem;
-        }
-
-        footer a {
-            text-decoration: none;
-            color: #666;
-            font-size: 1rem;
-            transition: color 0.3s ease;
-        }
-
-        footer a:hover {
-            color: #007BFF;
-        }
-
-        .social-icons a {
-            margin-right: 1rem;
-            font-size: 1.25rem;
-            color: #666;
-            transition: color 0.3s ease;
-        }
-
-        .social-icons a:hover {
-            color: #007BFF;
-        }
-
-        .footer-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 2rem;
-        }
-
-        .footer-grid > div {
-            display: flex;
-            flex-direction: column;
-        }
-
-        @media (max-width: 480px) {
-            footer .container {
-                padding: 0 1rem;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body, html { height: 100%; font-family: Arial, sans-serif; }
+    .container { display: flex; height: 100%; }
+    .left { position: relative; width: 50%; height: 100%; }
+    .left img { position: absolute; animation: slide 5s infinite; width: 100%; height: auto; }
+    .right { position: relative; width: 50%; height: 100%; overflow: hidden; }
+    .right p { position: absolute; bottom: -100%; animation: walk 5s infinite; font-size: 2vw; }
+    @keyframes slide { 0% { left: -100%; } 100% { left: 100%; } }
+    @keyframes walk { 0% { bottom: -100%; } 100% { bottom: 100%; } }
+  </style>
 </head>
-<body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
-
-    <!-- Left Side - College Heading -->
-    <div class="col-auto">
-        <h5 style="color: red; padding-left: 1.8em;">GOVERNMENT GIRLS COLLEGE<br> DAULATPUR</h5>
+<body>
+  <div class="container">
+    <div class="left">
+      <img src="./gallery/aa1.jpg" alt="Sliding Image">
     </div>
-
-    <!-- Bootstrap Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2 w-100">
-        <div class="container-fluid">
-            <a class="navbar-brand text-black" href="Government-Girls-College-Daulatpur.html">Govt Girls College Daulatpur</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">GALLERY</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container">
-        <!-- Left Side - Image Gallery (Slideshow) -->
-        <div class="left-side">
-            <h2></h2>
-            <div class="gallery">
-                <img src="./gallery/aa1.jpg" alt="Image 1">
-                <img src="./gallery/SB5.jpg" alt="Image 2">
-                <img src="./gallery/SB7.jpg" alt="Image 3">
-                <img src="./gallery/SB8.jpg" alt="Image 4">
-                <img src="./gallery/22.jpg" alt="Image 5">
-                <img src="./gallery/33.jpg" alt="Image 6">
-            </div>
-            <button class="nav-btn prev-btn" onclick="moveSlide(-1)">&#10094;</button>
-            <button class="nav-btn next-btn" onclick="moveSlide(1)">&#10095;</button>
-        </div>
-
-        <!-- Right Side - Scrolling Paragraph -->
-        <div class="right-side">
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-                <a href="Notice.html" style="font-size: 30px; text-decoration: none;">VIEW ALL</a>
-                <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:80px; height:auto;">
-            </div>
-
-            <div class="scroll-paragraph">
-                <p>it is hereby notified that <br> the pre-board examinations in our college will begin on wednesday 26th march... </p>
-            </div>
-
-            <div class="scroll-paragraph-2">
-                <p>it is hereby notified that <br> the pre-board examinations in our college will begin on wednesday 26th march... </p>
-            </div>
-        </div>
+    <div class="right">
+      <p>Walking Text from bottom to top.</p>
     </div>
-
-    <p style="text-align: center; color: black; font-size: 1.3rem; font-family: Arial, sans-serif; padding-left: 1em; padding-right: 2em;">
-        Note: Students must follow college rules and wear the official uniform neatly and respectfully, reflecting the values of our institution!</p>
-    
-    <div class="container mt-5 d-flex flex-wrap justify-content-between">
-        <!-- Left-side image -->
-        <div class="col-12 col-md-6">
-            <img src="./gallery/sir khalid.jpg" alt="Image" class="img-fluid second-image">
-            <p style="text-align: center; color: red; font-size: 1.0rem; font-family: Arial, sans-serif; padding-left: 0em; padding-right: 0em;">PRINCIPAL.KHALID HUSSAIN BURIRO</p><br>
-        </div>
-
-        <!-- Right-side text -->
-        <div class="col-12 col-md-6 text-center">
-            <p style="text-align: center; color: pink; font-size: 1.3rem; font-family: Arial, sans-serif;">PRINCIPAL'S MESSAGE</p>
-            <p style="text-align: center; color: black; font-size: 1.0rem; font-family: Arial, sans-serif; padding-left: 0em; padding-right: 0em;">Welcome to our College. We provide a learning environment where students excel academically and professionally. We strive to develop well-rounded individuals.</p><br>
-        </div>
-    </div>
-
-    <!-- Footer Section -->
-    <footer>
-        <div class="container">
-            <div class="footer-grid">
-                <div>
-                    <h2>Contact Information</h2>
-                    <ul>
-                        <li><a href="tel:+1234567890">+1234567890</a></li>
-                        <li><a href="mailto:info@gcdaulatpur.edu">info@gcdaulatpur.edu</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h2>Quick Links</h2>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="ABOUT-US.html">About Us</a></li>
-                        <li><a href="CONTACT-US.html">Contact Us</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h2>Follow Us</h2>
-                    <div class="social-icons">
-                        <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
-                        <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-                        <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Link to Bootstrap JS (CDN) -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-    
-    <!-- JavaScript for Slideshow -->
-    <script>
-        let currentIndex = 0;
-        const images = document.querySelectorAll('.gallery img');
-
-        function moveSlide(step) {
-            currentIndex += step;
-
-            if (currentIndex < 0) {
-                currentIndex = images.length - 1;
-            } else if (currentIndex >= images.length) {
-                currentIndex = 0;
-            }
-
-            const offset = -currentIndex * 100;
-            document.querySelector('.gallery').style.transform = `translateX(${offset}%)`;
-        }
-    </script>
+  </div>
 </body>
 </html>
